--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
+    "@angular/cdk": "^11.2.4",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
-    "@angular/core": "~11.2.1",
+    "@angular/core": "^11.2.5",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.1",
+    "@angular/material": "^11.2.4",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "angular-material": "^1.2.2",
     "firebase": "^8.2.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
