--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "angular-material": "^1.2.2",
+    "boostrap": "^2.0.0",
     "firebase": "^8.2.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
