--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -25,6 +25,7 @@
     "angular-material": "^1.2.2",
     "boostrap": "^2.0.0",
     "firebase": "^8.2.10",
+    "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
