--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "angular-material": "^1.2.2",
+    "angular-notifier": "^9.0.1",
     "boostrap": "^2.0.0",
     "firebase": "^8.2.10",
     "ngx-cookie-service": "^11.0.2",
