--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -28,6 +28,8 @@
     "firebase": "^8.2.10",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
+    "simplex-noise": "^2.4.0",
+    "three": "^0.126.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
