updated plane scene

--- a/music-visualizer/angular.json
+++ b/music-visualizer/angular.json
@@ -29,7 +29,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/assets/music"
+              "src/assets/music",
+              "src/assets/3d_models"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
