--- a/music-visualizer/tsconfig.json
+++ b/music-visualizer/tsconfig.json
@@ -26,6 +26,6 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "types": ["node"]
+    //"types": ["node"]
   }
 }
