--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@types/spotify-web-playback-sdk": "^0.1.8",
     "angular-material": "^1.2.2",
     "angular-notifier": "^9.0.1",
     "boostrap": "^2.0.0",
