--- a/music-visualizer/tsconfig.app.json
+++ b/music-visualizer/tsconfig.app.json
@@ -10,6 +10,7 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "/Users/ani/LocalDev/music_visualizer/music-visualizer/node_modules/@types/spotify-web-playback-sdk/index.d.ts"
   ]
 }
