--- a/music-visualizer/src/proxy.config.json
+++ b/music-visualizer/src/proxy.config.json
@@ -1,7 +1,7 @@
 
 {
   "/api": {
-    "target": "https://accounts.spotify.com/",
+    "target": "https://api.spotify.com/v1/",
     "secure": true,
     "changeOrigin": true,
     "pathRewrite": {
