--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -50,6 +50,7 @@
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
     "@types/jasmine": "~3.6.0",
+    "@types/jest": "^26.0.22",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
