--- a/music-visualizer/.gitignore
+++ b/music-visualizer/.gitignore
@@ -87,7 +87,9 @@ workspace.code-workspace
 *.iws
 
 ## Plugin-specific files:
-
+/src/environments/
+/src/server.crt
+/src/server.key
 # IntelliJ
 /out/
 
