--- a/music-visualizer/angular.json
+++ b/music-visualizer/angular.json
@@ -72,7 +72,9 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "music-visualizer:build",
-            "proxyConfig": "./src/proxy.config.json"
+            "proxyConfig": "./src/proxy.config.json",
+            "sslKey": "./src/server.key",
+            "sslCert": "./src/server.crt"
           },
           "configurations": {
             "production": {
