removed package-lock.json

--- a/music-visualizer/package.json
+++ b/music-visualizer/package.json
@@ -33,8 +33,9 @@
     "boostrap": "^2.0.0",
     "buffer": "^5.7.1",
     "fetch": "^1.1.0",
-    "firebase": "^8.2.10",
+    "firebase": "^8.4.2",
     "music-metadata-browser": "^2.2.6",
+    "nebula": "^0.0.2",
     "ngx-cookie-service": "^11.0.2",
     "node-id3": "^0.2.2",
     "process": "^0.11.10",
